<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Startup &amp; Recovery">

        <SwitchPreferenceCompat
            android:key="start_on_boot"
            android:title="@string/settings_start_on_boot"
            android:summary="@string/settings_start_on_boot_summary"
            android:icon="@drawable/ic_power_settings_new_24" />

        <SwitchPreferenceCompat
            android:key="watchdog"
            android:summary="@string/settings_watchdog_summary"
            android:title="@string/settings_watchdog"
            android:icon="@drawable/ic_visibility_24" />

        <SwitchPreferenceCompat
            android:key="auto_reconnect_mdns"
            android:title="Intelligent Auto-Reconnect"
            android:summary="Run a lightweight mDNS listener to automatically rebind the server if the ADB daemon drops on sleep or doze."
            android:defaultValue="true"
            android:icon="@drawable/ic_server_restart" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Network">

        <SwitchPreferenceCompat
            android:key="tcp_mode"
            android:title="@string/settings_tcp_mode"
            android:icon="@drawable/ic_adb_24"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="tcp_port"
            android:title="@string/settings_tcp_port"
            android:icon="@drawable/ic_lan_24"
            android:inputType="number" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced">

        <SwitchPreferenceCompat
            android:key="auto_disable_usb_debugging"
            android:title="@string/settings_auto_disable_usb_debugging"
            android:summary="@string/settings_auto_disable_usb_debugging_summary"
            android:icon="@drawable/ic_warning_24" />

        <SwitchPreferenceCompat
            android:key="live_activity_enabled"
            android:title="@string/settings_live_activity"
            android:summary="@string/settings_live_activity_summary"
            android:icon="@drawable/ic_bolt_24"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
