<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <af.shizuku.manager.settings.HomeLayoutSimulatorPreference
        android:key="home_layout_simulator" />

    <PreferenceCategory android:title="Home Cards">

        <SwitchPreferenceCompat
            android:key="show_terminal_home"
            android:title="@string/settings_show_terminal_home"
            android:icon="@drawable/ic_terminal_24"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="show_automation_home"
            android:title="@string/settings_show_automation_home"
            android:icon="@drawable/ic_integration_instructions_24"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="show_learn_more_home"
            android:title="@string/settings_show_learn_more_home"
            android:icon="@drawable/ic_outline_info_24"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="show_start_adb_home"
            android:title="@string/settings_show_start_adb_home"
            android:icon="@drawable/ic_adb_24"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="companion_mode"
            android:title="@string/settings_companion_mode"
            android:summary="@string/settings_companion_mode_summary"
            android:icon="@drawable/ic_baseline_link_24"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Activity Log">

        <SwitchPreferenceCompat
            android:key="show_activity_log_home"
            android:title="@string/settings_show_activity_log_home"
            android:icon="@drawable/ic_article_24"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="App Database">

        <Preference
            android:key="update_app_database"
            android:title="@string/settings_update_app_database"
            android:summary="@string/settings_update_app_database_summary"
            android:icon="@drawable/ic_autorenew" />

    </PreferenceCategory>

</PreferenceScreen>
